--- a/thesis intermedia/3- state of art/3.1 Panorama Tecnológico e Soluções Existentes.md
+++ b/thesis intermedia/3- state of art/3.1 Panorama Tecnológico e Soluções Existentes.md
@@ -37,3 +37,71 @@ The analysis reveals **persistent gaps**: No vendor interprets a single prompt t
 #### Concluding Synthesis
 
 This analysis exposes a **persistent technological gap** in the CCaaS ecosystem for NL-based dashboard generation. Platforms fragment between Q&A and manual configuration, without a solution for complete one-shot prompts. The **proposed internship project** contributes innovatively with LLMs for end-to-end generation, addressing gaps in automation, semantics, and real-time. Criticism: For relevance in 2025, integrate failure risks and external benchmarks to avoid obsolescence.
+
+
+---
+
+
+
+## [[State of art]]
+
+### Introduction
+
+The **Contact Center as a Service (CCaaS)** market continues to evolve rapidly in 2025, fueled by advancements in **real-time operational analytics**, **generative AI (GenAI)**, and **democratized access to insights**. **Natural Language to Dashboard (NL→Dash)** functionalities are gaining traction, enabling users to query and modify dashboards via natural language. However, full **one-shot dashboard generation**—automatically creating title, layout, metrics, filters, and thresholds from a single prompt—remains limited in CCaaS platforms. While GenAI has enabled partial NL interactions (e.g., querying metrics or editing elements), complete automation is nascent, with broader BI tools like **ThoughtSpot** leading in non-CCaaS contexts [1][2].
+
+---
+
+### Individual Critical Analysis
+
+**NICE (CXone / Enlighten)**  
+NICE leads with advanced NL→Dash capabilities via **Enlighten Actions**, **CXone Dashboards**, and the **Observability Copilot** (introduced in the 25.3 release, August 2025) [3]. Users can query dashboard data in natural language (e.g., _“Top 10 supervisors with most sessions?”_) and modify elements like categories/intents via Copilot commands (add/remove/rename in 25.4 release, October 2025) [4]. AI filtering with NL prompts supports multi-ACD and languages. However, **no evidence of full one-shot generation** exists—structural elements (e.g., layout, thresholds) still require manual configuration. It remains closer to **Q&A/ad-hoc interaction** than to end-to-end automation. Criticism: dependence on iterative prompts may frustrate users, and integration with real-time streams is inconsistent.
+
+**Genesys (Cloud CX)**  
+Genesys offers strong analytics via **Reports, Views, and Dashboards**, with 2025 updates introducing **AI Agents** for NL access to metrics, trends, and agent activity (September 2025) [5]. **Virtual Agent dashboards** (July 2025) provide preconfigured views but remain manual/UI-based [6]. There is no public documentation of NL→Dash for automatic layout generation or semantic configuration. Criticism: the absence of NL for initial dashboard creation makes it less advanced than NICE, focusing more on conversational agents than structured analytics.
+
+**Talkdesk (Explore / Live Dashboards)**  
+**Talkdesk Explore** and **Live Dashboards** emphasize **real-time monitoring**, with conversational AI investments such as **Autopilot** supporting **59+ languages** (2025) [7]. Nevertheless, dashboard creation remains manual through a visual editor, with **no evidence of NL→Dash or semantic mapping pipelines**. 2025 updates highlight **conversational flows**, not dashboard automation. Criticism: focus on customer-facing AI neglects analytical automation, leaving supervisors dependent on manual setup.
+
+**Five9 (Analytics / AI Insights)**  
+Five9 expanded GenAI capabilities with **AI Insights** and **Spotlight** (launched March 2025), enabling **NL queries** like _“Ask Your Data Anything”_ and custom metrics generation [8][9]. While insightful for analytics, dashboard construction remains manual (selection of campaigns/skills via UI). There is **no one-shot dashboard generation**. Criticism: despite stronger NL insights, lack of automation increases inconsistency risk in production data; **30% of GenAI PoCs failed in 2025** across the sector [10].
+
+---
+
+### Technical Comparison
+
+The comparative matrix reveals limited NL→Dash maturity in CCaaS, with NICE leading in NL-driven modifications. No vendor currently supports **complete one-shot generation**, including all structural elements. For context, **ThoughtSpot** provides NL queries for ad-hoc visualizations but lacks CCaaS-specific integration [1][2].
+
+|Vendor|NL→Dash Support|Scope of Generation|NL Modifications|GenAI Integration|Public Evidence (2025 Updates)|
+|---|---|---|---|---|---|
+|NICE|Advanced|Q&A, charts, filtering; partial mods|Yes (add/remove)|Yes (Copilot)|25.3/25.4 Releases; Observability Copilot [3][4]|
+|Genesys|Partial|Manual dashboards; NL metrics access|No|Yes (AI Agents)|Sept 2025 AI Agents; Virtual Dashboards [5][6]|
+|Talkdesk|No|Manual dashboards|No|Partial (NLP)|Autopilot / Voice Agents [7]|
+|Five9|Partial|Manual creation; NL insights/queries|No|Yes (Spotlight)|March 2025 Spotlight / AI Insights [8][9]|
+
+---
+
+### Gap Identification
+
+The analysis reveals **persistent gaps**: no vendor interprets a **single prompt** to generate a fully configured dashboard. There is no integration with **semantic metric layers** ensuring consistency, nor with **real-time data streams** for dynamic updates. Furthermore, **GenAI project risk** remains significant—**Gartner (2025)** reports that **over 30% of GenAI projects are abandoned post-PoC**, mainly due to poor reliability and lack of ROI [10][11]. This reinforces the need for controlled semantic layers and deterministic generation methods.
+
+---
+
+### Concluding Synthesis
+
+This analysis exposes a **technological gap** in the CCaaS ecosystem regarding **NL-based dashboard generation**. Platforms fragment between **Q&A interfaces** and **manual configurations**, without any solution for **complete one-shot prompts**. The **proposed internship project** directly addresses this gap through **LLM-driven end-to-end generation**, introducing a **semantic alignment layer**, **validated JSON schemas**, and **real-time integration**. By incorporating **robust validation** and learning from **external failure benchmarks** (e.g., Gartner [10]), the project mitigates current adoption risks and advances the automation frontier within CCaaS analytics.
+
+---
+
+### References
+
+[1] ThoughtSpot, _Natural Language Search for Analytics_, 2025.  
+[2] ThoughtSpot, _ThoughtSpot Sage and Agentic BI Overview_, 2025.  
+[3] NICE, _CXone 25.3 Release Notes – Enlighten Actions and Observability Copilot_, Aug. 2025.  
+[4] NICE, _CXone 25.4 Release Preview – Copilot Dashboard Commands_, Oct. 2025.  
+[5] Genesys, _Introducing AI Agents for Cloud CX_, Sept. 2025.  
+[6] Genesys, _Virtual Agent Dashboards Overview_, Jul. 2025.  
+[7] Talkdesk, _AI Agents for Voice – Multilingual Autopilot Overview_, Mar. 2025.  
+[8] Five9, _Spotlight for AI Insights – Product Launch_, Mar. 2025.  
+[9] Five9, _AI Insights Platform Overview_, 2025.  
+[10] Gartner, _Forecast: 30% of GenAI Projects to Be Abandoned Post-PoC by 2025_, 2025.  
+[11] Gartner, _Top Strategic Predictions for 2027: The Future of Agentic AI_, 2025.
